# slew

./: .gitignore  .osgrepignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_PROGRESS.md  CLAUDE.md  CONTROLLERS.md  LICENSE  PACKAGING.md  PLAN_MULTI_LAYER_ALPHA.md  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  COLOR_PARAMS_WLED.md  CONTROLLERS.md  CONVENTIONS.md  CREATING_SKETCHES.md  FX.md  MIDIMIX_DESIGN_SPEC.md  MODULATION.md  PACKAGING.md  PROMPT.md  SLOTS.md  VIDEO_OUTPUT_TROUBLESHOOTING.md
docs/finished/: AURA_SHADER.md  AUTOMATED_RELEASES.md  AUTO_UPDATE.md  BETTER_COLOR_PICKER.md  BUTTON_CONTROLS.md  CLEANUP.md  CODE_QUALITY_REFACTORS.md  CONSOLE_LOGGING_CLEANUP.md  GLOBAL_UI_CLEANUP.md  IOSURFACE_FEASIBILITY.md  MIDIMIX_AND_ALPHA_REWORK.md  PREVIEW_STREAMING.md  SIDEBAR_VIDEO_APPEARANCE.md  SKETCH_SEARCH.md  SOFT_TAKEOVER_INDICATOR.md  TEST_COVERAGE.md  VIDEO_OUTPUT_OPTIMIZATION.md  WEBGPU_MIGRATION.md
docs/working/: AUTOMATED_RELEASES.md  BETTER_COLOR_PICKER.md  BUTTON_CONTROLS.md  CLEANUP.md  CODE_QUALITY_REFACTORS.md  MIDIMIX_AND_ALPHA_REWORK.md  POST_PROCESSING_EFFECTS.md  PREVIEW_STREAMING.md  SIDEBAR_VIDEO_APPEARANCE.md  VIDEO_OUTPUT_OPTIMIZATION.md
scripts/: install-ndi.sh  install-syphon.sh  package.sh
src/: App.module.css  App.tsx  AppShell.module.css  config.ts  globals.css  main.tsx  reset.css  tailwind.css
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/frameworks/: README.md
src-tauri/src/: audio.rs  bpm.rs  commands.rs  config.rs  frame_distribution.rs  hid.rs  lib.rs  link.rs  main.rs  midi.rs  midi_clock.rs  midi_clock_out.rs  modulation.rs  osc.rs  parameter_store.rs  presets.rs  projects.rs  spout.rs  syphon.rs  updater.rs  video_out.rs  window_manager.rs  wled.rs
src-tauri/src/audio/: analysis.rs  buffer.rs  capture.rs  commands.rs  constants.rs  devices.rs  engine.rs  events.rs  mappings.rs  mod.rs  types.rs
src-tauri/src/common/: events.rs  mod.rs  persistence.rs
src-tauri/src/hid/: commands.rs  connections.rs  constants.rs  devices.rs  engine.rs  events.rs  mappings.rs  mod.rs  parsing.rs  reading.rs  types.rs
src-tauri/src/midi/: apc_mini.rs  commands.rs  connections.rs  constants.rs  device_layouts.rs  devices.rs  engine.rs  events.rs  import_export.rs  launchpad.rs  learn.rs  mappings.rs  message_handler.rs  mf_64.rs  mf_spectra.rs  mf_twister.rs  midimix.rs  mod.rs  mpd218.rs  output.rs  templates.rs  types.rs
src-tauri/src/modulation/: audio_mod.rs  commands.rs  engine.rs  lfos.rs  mod.rs  persistence.rs  targets.rs  types.rs
src-tauri/src/osc/: beat.rs  commands.rs  engine.rs  handler.rs  mappings.rs  mod.rs  send.rs  server.rs  types.rs
src-tauri/src/video_out/: commands.rs  manager.rs  mod.rs  types.rs
src-tauri/src/video_out/backends/: mod.rs  ndi.rs  spout.rs  syphon.rs
src/components/: index.ts
src/components/AudioIndicator/: AudioIndicator.module.css  AudioIndicator.tsx
src/components/AudioPanel/: AudioPanel.module.css  AudioPanel.test.tsx  AudioPanel.tsx  index.ts
src/components/BackendInspector/: BackendInspector.module.css  BackendInspector.tsx  index.ts
src/components/BpmPulseOverlay/: BpmPulseOverlay.module.css  BpmPulseOverlay.tsx
src/components/Button/: Button.module.css  Button.tsx
src/components/ColorPalette/: ColorPalette.module.css  ColorPalette.tsx
src/components/ColorPicker/: ColorPicker.module.css  ColorPicker.test.tsx  ColorPicker.tsx
src/components/DebugLogs/: DebugLogs.module.css  DebugLogs.tsx  index.ts
src/components/DebugMetrics/: DebugMetrics.module.css  DebugMetrics.tsx  index.ts
src/components/DebugPanel/: DebugPanel.module.css  DebugPanel.tsx  index.ts
src/components/HidPanel/: HidPanel.module.css  HidPanel.tsx  index.ts
src/components/KnobInput/: KnobInput.module.css  KnobInput.test.tsx  KnobInput.tsx  (+1 more)
src/controls/: BackendInspector.tsx  DebugLogs.tsx  DebugMetrics.tsx  DebugPanel.tsx  PrimaryControlsPanel.tsx  SceneAControls.tsx  ScenePairingHeader.tsx  controlsParameters.ts  scenePairing.ts  useParameterStore.ts  useUndoHistory.ts
src/devices/: types.ts  useInputDevices.ts  useOutputDevices.ts
src/effects/: EffectsContext.tsx  EffectsLayer.tsx  buildEffectChain.ts  effectDescriptors.ts  effectTypes.ts  index.ts
src/hooks/: index.ts  useContrast.ts  useCrossfade.ts  useGlobalKeyboard.ts  useLayoutPreferences.ts  useMacropadController.ts  useParameterBackendSync.ts  useParameterStore.ts  usePerformanceMonitor.ts  usePresets.ts  useProjects.test.ts  useProjects.ts  useRendererSettings.ts  useSlotColors.ts  useStatsToggle.ts  useTheme.ts  useUpdater.ts  useWindowManager.ts
src/inputs/: audio.ts  bpmSource.ts  deviceLayouts.ts  hid.ts  midi.ts  modulation.ts  osc.ts  tapTempo.test.ts  tapTempo.ts  videoOutput.ts  wled.ts
src/lib/: color.ts  frameCapture.ts  logger.ts  storage.test.ts  storage.ts
src/outputs/: videoOutput.ts  wled.ts
src/panels/: registry.tsx
src/renderer/: RendererRoot.module.css  RendererRoot.tsx  SlotPreviewCapture.tsx  VideoOutputCapture.tsx  WebGPUCanvas.tsx
src/scenes/: sceneComponents.ts  sceneTypes.ts  useSceneManager.ts  useSceneSlots.ts
src/sketches/: LazySketchRegistry.tsx  index.ts  parameterMappings.test.ts  parameterMappings.ts  types.ts
src/slots/: index.ts  slotTypes.test.ts  slotTypes.ts  useSlots.test.ts  useSlots.ts
src/test/: setup.ts
(+274 files in other folders)
