[package]
name = "sebcat-vj"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sebcat_vj_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"

# Input layer
midir = "0.10"       # Cross-platform MIDI I/O
rosc = "0.10"        # OSC message parsing
cpal = "0.15"        # Cross-platform audio I/O
rustfft = "6.2"      # FFT processing
hidapi = "2.6"       # Cross-platform HID device access
log = "0.4"          # Logging facade
rand = "0.8"         # Random number generation for LFO
chrono = "0.4"       # Date/time for logging
tokio = { version = "1", features = ["time"] }  # Async runtime for delays
base64 = "0.22"      # Fast base64 decoding for video frames
env_logger = "0.11"  # Logging implementation

# Video Output (macOS Syphon)
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"                    # Objective-C runtime (must match Tauri's version)
block2 = "0.6"                   # Objective-C blocks support
dirs = "5.0"                     # Home directory detection for framework search

# Video Output (NDI - cross-platform, optional)
[dependencies.grafton-ndi]
version = "0.9"
optional = true

[features]
default = ["ndi"]                # NDI enabled by default (requires SDK)
ndi = ["grafton-ndi"]            # NDI requires SDK installation
